--- a/style.css
+++ b/style.css
@@ -264,6 +264,10 @@ form button{
     
 }
 
+form button:hover{
+    background-color: #f53232;
+}
+
 form :focus, textarea:focus{
     outline: none;
 }
